button: fix stuck hover style on mobile

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -70,11 +70,14 @@
     background-color: var(--sl-color-white);
     border-color: var(--sl-color-gray-300);
     color: var(--sl-color-gray-600);
+    -webkit-tap-highlight-color: var(--sl-color-primary-300);
 
-    &:hover:not(.button--disabled) {
-      background-color: var(--sl-color-primary-50);
-      border-color: var(--sl-color-primary-300);
-      color: var(--sl-color-primary-600);
+    @media (hover: hover) and (pointer: fine) {
+      &:hover:not(.button--disabled) {
+        background-color: var(--sl-color-primary-50);
+        border-color: var(--sl-color-primary-300);
+        color: var(--sl-color-primary-600);
+      }
     }
 
     &:focus:not(.button--disabled) {
@@ -95,11 +98,14 @@
     background-color: var(--sl-color-primary-500);
     border-color: var(--sl-color-primary-500);
     color: var(--sl-color-primary-text);
+    -webkit-tap-highlight-color: var(--sl-color-primary-400);
 
-    &:hover:not(.button--disabled) {
-      background-color: var(--sl-color-primary-400);
-      border-color: var(--sl-color-primary-400);
-      color: var(--sl-color-primary-text);
+    @media (hover: hover) and (pointer: fine) {
+      &:hover:not(.button--disabled) {
+        background-color: var(--sl-color-primary-400);
+        border-color: var(--sl-color-primary-400);
+        color: var(--sl-color-primary-text);
+      }
     }
 
     &:focus:not(.button--disabled) {
@@ -120,11 +126,14 @@
     background-color: var(--sl-color-success-500);
     border-color: var(--sl-color-success-500);
     color: var(--sl-color-success-text);
+    -webkit-tap-highlight-color: var(--sl-color-success-400);
 
-    &:hover:not(.button--disabled) {
-      background-color: var(--sl-color-success-400);
-      border-color: var(--sl-color-success-400);
-      color: var(--sl-color-success-text);
+    @media (hover: hover) and (pointer: fine) {
+      &:hover:not(.button--disabled) {
+        background-color: var(--sl-color-success-400);
+        border-color: var(--sl-color-success-400);
+        color: var(--sl-color-success-text);
+      }
     }
 
     &:focus:not(.button--disabled) {
@@ -145,11 +154,14 @@
     background-color: var(--sl-color-info-500);
     border-color: var(--sl-color-info-500);
     color: var(--sl-color-info-text);
+    -webkit-tap-highlight-color: var(--sl-color-info-400);
 
-    &:hover:not(.button--disabled) {
-      background-color: var(--sl-color-info-400);
-      border-color: var(--sl-color-info-400);
-      color: var(--sl-color-info-text);
+    @media (hover: hover) and (pointer: fine) {
+      &:hover:not(.button--disabled) {
+        background-color: var(--sl-color-info-400);
+        border-color: var(--sl-color-info-400);
+        color: var(--sl-color-info-text);
+      }
     }
 
     &:focus:not(.button--disabled) {
@@ -170,11 +182,14 @@
     background-color: var(--sl-color-warning-500);
     border-color: var(--sl-color-warning-500);
     color: var(--sl-color-warning-text);
+    -webkit-tap-highlight-color: var(--sl-color-warning-400);
 
-    &:hover:not(.button--disabled) {
-      background-color: var(--sl-color-warning-400);
-      border-color: var(--sl-color-warning-400);
-      color: var(--sl-color-warning-text);
+    @media (hover: hover) and (pointer: fine) {
+      &:hover:not(.button--disabled) {
+        background-color: var(--sl-color-warning-400);
+        border-color: var(--sl-color-warning-400);
+        color: var(--sl-color-warning-text);
+      }
     }
 
     &:focus:not(.button--disabled) {
@@ -195,11 +210,14 @@
     background-color: var(--sl-color-danger-500);
     border-color: var(--sl-color-danger-500);
     color: var(--sl-color-danger-text);
+    -webkit-tap-highlight-color: var(--sl-color-danger-400);
 
-    &:hover:not(.button--disabled) {
-      background-color: var(--sl-color-danger-400);
-      border-color: var(--sl-color-danger-400);
-      color: var(--sl-color-danger-text);
+    @media (hover: hover) and (pointer: fine) {
+      &:hover:not(.button--disabled) {
+        background-color: var(--sl-color-danger-400);
+        border-color: var(--sl-color-danger-400);
+        color: var(--sl-color-danger-text);
+      }
     }
 
     &:focus:not(.button--disabled) {
